# pyTGM

./: .flake8  .gitattributes  .gitnotes  .pylintrc  CHANGELOG.txt  CHANGELOG_NOTES.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENCE.txt  LICENSE.md  MANIFEST.in  README.jp.md  README.md  README.txt  TODO  VERSION.json  meta.json  miniaudio.h  psound.cpp  pyroject.toml  requirements.txt  requrements.txt  setup-linux.sh  setup-mac.sh  setup-win.sh  setup.py  setup.sh  test.py  tinyaudio.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  compile_report.md
.github/workflows/: Isort.yml  LicUPD.yml  Mypy.yml  Saftey.yml  compile.yml  cpplint.yml  flake8-lint.yml  generate-sha3-hashes.yml  pylint.yml  python-publish.yml  test.yml
main/: pytgm.py
pyTGM/: __init__.py  local_server.py  rect.cpp  rect.pyi  sound.cpp
pyTGM/encrypt/: __init__.py  b64.cpp  hk512.cpp  sha256.py
pyTGM/encrypt/b64/: b64.cpp  b64.hpp  b64.pyx
pyTGM/encrypt/hk512/: hk512.cpp  hk512.hpp  hk512.pyx
pyTGM/pattern/: __init__.py  rect.cpp
pyTGM/rect/: rect.cpp  rect.hpp  rect.pyx
pyTGM/sound/: sound.cpp  sound.hpp  sound.pyx
pyTGM/terminal/: __init__.py  clear.cpp  color.cpp  geky.cpp  pos.cpp
pyTGM/terminal/clear/: clear.cpp  clear.hpp  clear.pyx
pyTGM/terminal/color/: color.cpp  color.hpp  color.pyx
pyTGM/terminal/geky/: geky.cpp  geky.hpp  geky.pyx
pyTGM/terminal/pos/: pos.cpp  pos.hpp  pos.pyx
pytgm/: .random.py  Board.py  LocalServer.py  VERSION.json  __init__.py  b64.py  board.py  click.c  click.pyd  client.py  file.py  file_mod.cpp  file_mod.py  font.py  fonts.py  geky.py  getch.py  graphics.py  local_server.py  monopoly.py  psound.cpp  pytgm.py  random.py  server.py  sound.cpp  sound.py  terd.py  terminal.py  testing.py
pytgm/Markup/: __init__.py  color.py
pytgm/encrypt/: __init__.py  b64.cpp  b64.py  hk32.cpp  hk512.cpp  sha256.py
pytgm/graphics/: Markup.py  __init__.py  cls.cpp  cls.py  color.cpp  color.py  pos.cpp  pos.py
pytgm/pattern/: 1gon.py  __init__.py  gon.py  rect.cpp  rect.py
pytgm/random/num/: integer.py
pytgm/sound/: __init__.py  sound.cpp
pytgm/terd/: __init__.py  click.c  click.cpp  geky.py
pytgm/terminal/: __init__.py  click.cpp  cls.cpp  color.cpp  geky.cpp  pos.cpp
